# rusl

./: .gitignore  CLAUDE.md  Makefile  README.md  TEST.md  musl-Makefile
rusl/: Cargo.toml  Makefile  plan_crate_split.md  result
rusl/.cargo/: config.toml  config.toml.bak
rusl/rusl-core/: Cargo.toml
rusl/rusl-core/src/: c_types.rs  lib.rs
rusl/rusl-core/src/arch/: aarch64.rs  mod.rs  x86_64.rs
rusl/rusl-core/src/errno/: __errno_location.rs  errno_inner.rs  mod.rs  strerror.rs
rusl/rusl-core/src/syscall/: mod.rs  num.rs  raw.rs  ret.rs  syscall_ret.rs
rusl/rusl-ctype/: Cargo.toml  build.rs
rusl/rusl-ctype/src/: __ctype_b_loc.rs  __ctype_get_mb_cur_max.rs  __ctype_tolower_loc.rs  __ctype_toupper_loc.rs  ctype_inner.rs  import.rs  isalnum.rs  isalpha.rs  isascii.rs  isblank.rs  iscntrl.rs  isdigit.rs  isgraph.rs  islower.rs  isprint.rs  ispunct.rs  isspace.rs  isupper.rs  iswalnum.rs  iswalpha.rs  iswblank.rs  iswcntrl.rs  iswctype.rs  iswdigit.rs  iswgraph.rs  iswlower.rs  iswprint.rs  iswpunct.rs  iswspace.rs  iswupper.rs  iswxdigit.rs  isxdigit.rs  lib.rs  toascii.rs  tolower.rs  toupper.rs  towctrans.rs  wcswidth.rs  wctrans.rs  wcwidth.rs
rusl/rusl-env/: Cargo.toml
rusl/rusl-env/src/: __environ.rs  __init_tls.rs  __libc_start_main.rs  __reset_tls.rs  __stack_chk_fail.rs  allocator.rs  clearenv.rs  env_inner.rs  getenv.rs  import.rs  lib.rs  putenv.rs  secure_getenv.rs  setenv.rs  unsetenv.rs
rusl/rusl-errno/: Cargo.toml  build.rs
rusl/rusl-errno/src/: __errno_location.rs  errno_inner.rs  import.rs  lib.rs  strerror.rs  strerror_r.rs
rusl/rusl-exit/: Cargo.toml
rusl/rusl-exit/src/: _Exit.rs  abort.rs  abort_lock.rs  assert.rs  atexit.rs  exit.rs  exit_inner.rs  lib.rs  quick_exit.rs  sys_consts.rs
rusl/rusl-internal/: Cargo.toml
rusl/rusl-internal/src/: aio_impl.rs  atomic.rs  complex_impl.rs  defsysinfo.rs  emulate_wait4.rs  fdpic_crt.rs  file.rs  floatscan.rs  fork_impl.rs  futex.rs  import.rs  internal_inner.rs  intscan.rs  ksigaction.rs  lib.rs  libc.rs  lock.rs  procfdname.rs  pthread_impl.rs  shcall.rs  shgetc.rs  syscall.rs  syscall_ret.rs  vdso.rs  version.rs
rusl/rusl-internal/src/syscall/: do_syscall.rs  num.rs  raw.rs  syscall_ret.rs
rusl/rusl-main/: Cargo.toml  build.rs  result
rusl/rusl-main/src/: lib.rs
rusl/rusl-main/src/api/: ctype.rs  env.rs  errno.rs  exit.rs  malloc.rs  mod.rs  prng.rs  regex.rs  search.rs  stdio.rs  stdlib.rs  string.rs  unistd.rs
rusl/rusl-main/tests/: ctype_integration.rs  env_integration.rs  errno_integration.rs  exit_integration.rs  integration.rs  prng_integration.rs  regex_integration.rs  search_integration.rs  stdio_integration.rs  stdlib_integration.rs  string_integration.rs  unistd_integration.rs
rusl/rusl-main/tests/ctype/: ctype_get_mb_cur_max_test.rs  ctype_integration_test.rs  isalpha_test.rs  isascii_test.rs  isblank_test.rs  iscntrl_test.rs  isdigit_test.rs  isgraph_test.rs  islower_test.rs  isprint_test.rs  ispunct_test.rs  isspace_test.rs  isupper_test.rs  iswalnum_test.rs  iswalpha_test.rs  iswblank_test.rs  iswcntrl_test.rs  iswctype_test.rs  iswdigit_test.rs  iswgraph_test.rs  iswlower_test.rs  iswprint_test.rs  iswpunct_test.rs  iswspace_test.rs  iswupper_test.rs  iswxdigit_test.rs  isxdigit_test.rs  mod.rs  toascii_test.rs  tolower_test.rs  toupper_test.rs  towctrans_test.rs  wcswidth_test.rs  wctrans_test.rs  wcwidth_test.rs
rusl/rusl-main/tests/env/: clearenv_test.rs  environ_test.rs  getenv_test.rs  mod.rs  putenv_test.rs  secure_getenv_test.rs  setenv_test.rs  unsetenv_test.rs
rusl/rusl-main/tests/errno/: errno_loc_test.rs  mod.rs  (+1 more)
rusl/rusl-malloc/: Cargo.toml
rusl/rusl-malloc/src/: allocator.rs  calloc_inner.rs  free.rs  import.rs  lib.rs  libc_calloc.rs  malloc_inner.rs  memalign.rs  posix_memalign.rs  realloc.rs  reallocarray.rs  replaced.rs
rusl/rusl-prng/: Cargo.toml
rusl/rusl-prng/src/: __rand48_step.rs  __seed48.rs  drand48.rs  lcong48.rs  lib.rs  lrand48.rs  mrand48.rs  prng_inner.rs  rand.rs  rand_r.rs  random.rs  seed48.rs  srand48.rs
rusl/rusl-regex/: Cargo.toml
rusl/rusl-regex/src/: fnmatch.rs  glob.rs  import.rs  lib.rs  regcomp.rs  regcomp_ast.rs  regcomp_nfl.rs  regcomp_parse.rs  regcomp_transform.rs  regerror.rs  regex_inner.rs  regexec.rs  regexec_backtrack.rs  regexec_parallel.rs  tre.rs  tre_mem.rs
rusl/rusl-search/: Cargo.toml
rusl/rusl-search/src/: allocator.rs  hsearch.rs  import.rs  insque.rs  lib.rs  lsearch.rs  search_inner.rs  tdelete.rs  tdestroy.rs  tfind.rs  tsearch.rs  twalk.rs  types.rs
rusl/rusl-stdio/: Cargo.toml  build.rs
rusl/rusl-stdio/src/: __fclose_ca.rs  __fdopen.rs  __fmodeflags.rs  __fopen_rb_ca.rs  __lockfile.rs  __overflow.rs  __stdio_close.rs  __stdio_exit.rs  __stdio_read.rs  __stdio_seek.rs  __stdio_write.rs  __stdout_write.rs  __toread.rs  __towrite.rs  __uflow.rs  asprintf.rs  clearerr.rs  dprintf.rs  ext.rs  ext2.rs  fclose.rs  feof.rs  ferror.rs  fflush.rs  fgetc.rs  fgetln.rs  fgetpos.rs  fgets.rs  fgetwc.rs  fgetws.rs  fileno.rs  flockfile.rs  fmemopen.rs  fopen.rs  fopencookie.rs  fprintf.rs  fputc.rs  fputs.rs  fputwc.rs  fputws.rs  (+78 more)
rusl/rusl-stdlib/: Cargo.toml
rusl/rusl-stdlib/src/: abs.rs  atof.rs  atoi.rs  bsearch.rs  div.rs  ecvt.rs  labs.rs  lib.rs  qsort.rs  stdlib_inner.rs  strtod.rs  strtol.rs  wcstod.rs  wcstol.rs
rusl/rusl-string/: Cargo.toml
rusl/rusl-string/src/: bcmp.rs  bcopy.rs  bzero.rs  explicit_bzero.rs  index.rs  lib.rs  memccpy.rs  memchr.rs  memcmp.rs  memcpy.rs  memmem.rs  memmove.rs  mempcpy.rs  memrchr.rs  memset.rs  rindex.rs  stpcpy.rs  stpncpy.rs  strcasecmp.rs  strcasestr.rs  strcat.rs  strchr.rs  strchrnul.rs  strcmp.rs  strcpy.rs  strcspn.rs  strdup.rs  strerror_r.rs  string_inner.rs  strlcat.rs  strlcpy.rs  strlen.rs  strncasecmp.rs  strncat.rs  strncmp.rs  strncpy.rs  strndup.rs  strnlen.rs  strpbrk.rs  strrchr.rs  (+36 more)
rusl/rusl-syscall/: Cargo.toml
rusl/rusl-syscall/src/: lib.rs
rusl/rusl-unistd/: Cargo.toml
rusl/rusl-unistd/src/: _exit.rs  lib.rs  unistd_inner.rs  write.rs
rusl/test-framework/: Cargo.toml
rusl/test-framework/src/: lib.rs
(+849 files in other folders)
