[package]
name = "rusl-errno"
version = "0.1.0"
edition = "2021"
description = "rusl errno module — errno accessor and strerror"

[lib]
crate-type = ["lib", "staticlib"]
doctest = false
test = true

[features]
default = []
c-test = []

[dependencies]
rusl-core = { path = "../rusl-core" ,features = ["rusl"]}

[profile.dev]
panic = "abort"

[profile.test]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = "s"
lto = true