[package]
name = "rusl-exit"
version = "0.1.0"
edition = "2021"
description = "rusl exit module"

[lib]
crate-type = ["lib", "staticlib"]
doctest = false
test = true

[features]
default = ["rusl"]
c-test = []
rusl = []

[dependencies]
rusl-core = { path = "../rusl-core", features = ["rusl"] }
rusl-syscall = { path = "../rusl-syscall" }

[profile.dev]
panic = "abort"

[profile.test]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = "s"
lto = true
