[package]
name = "rusl-malloc"
version = "0.1.0"
edition = "2021"
description = "rusl malloc module"

[lib]
crate-type = ["lib", "staticlib"]
doctest = false
test = true

[features]
default = []
c-test = []
# allocator = []

[dependencies]
rusl-core = { path = "../rusl-core" ,features = ["rusl"]}
rusl-string = { path = "../rusl-string" }
rusl-internal = { path = "../rusl-internal" }

[profile.dev]
panic = "abort"

[profile.test]
# no_std 测试：由自定义 test framework (setjmp/longjmp) 处理 panic 捕获
panic = "abort"

[profile.release]
panic = "abort"
opt-level = "s"
lto = true