[package]
name = "rusl-malloc"
version = "0.1.0"
edition = "2021"
description = "rusl malloc module"

[lib]
crate-type = ["lib", "staticlib"]
doctest = false
test = true

[features]
# default = []
default = ["rusl"]
rusl = ["dep:rusl-internal", "dep:rusl-string", "dep:rusl-errno"]

[dependencies]
rusl-core = { path = "../rusl-core" ,features = ["rusl"]}
rusl-syscall = { path = "../rusl-syscall" }
rusl-string = { path = "../rusl-string", optional = true }
rusl-internal = { path = "../rusl-internal", optional = true }
rusl-errno = { path = "../rusl-errno", optional = true }

[profile.dev]
panic = "abort"

[profile.test]
# no_std 测试：由自定义 test framework (setjmp/longjmp) 处理 panic 捕获
panic = "abort"

[profile.release]
panic = "abort"
opt-level = "s"
lto = true