[package]
name = "rusl-regex"
version = "0.1.0"
edition = "2021"
description = "rusl regex module"

[lib]
crate-type = ["lib", "staticlib"]
doctest = false
test = true

[features]
default = ["rusl"]
c-test = []
# 开启时依赖rusl-malloc的global allocator,否则自己提供allocator
rusl = ["dep:rusl-malloc"]

[dependencies]
rusl-core = { path = "../rusl-core" }
rusl-errno = { path = "../rusl-errno" }
rusl-string = { path = "../rusl-string" }
rusl-stdlib = { path = "../rusl-stdlib" }
rusl-ctype = { path = "../rusl-ctype" }
rusl-internal = { path = "../rusl-internal" }
rusl-malloc = { path = "../rusl-malloc", optional = true}
rusl-env = { path = "../rusl-env" }

[profile.dev]
panic = "abort"

[profile.test]
# no_std 测试：由自定义 test framework (setjmp/longjmp) 处理 panic 捕获
panic = "abort"

[profile.release]
panic = "abort"
opt-level = "s"
lto = true