[package]
name = "rusl-regex"
version = "0.1.0"
edition = "2021"
description = "rusl regex module"

[lib]
crate-type = ["lib", "staticlib"]
doctest = false
test = true

[features]
default = ["rusl"]
c-test = []
# 开启时依赖各rusl crate,否则使用musl C接口
rusl = ["dep:rusl-malloc", "dep:rusl-string", "dep:rusl-stdlib", "dep:rusl-ctype", "dep:rusl-internal", "dep:rusl-env"]

[dependencies]
rusl-core = { path = "../rusl-core" }
rusl-string = { path = "../rusl-string", optional = true }
rusl-stdlib = { path = "../rusl-stdlib", optional = true }
rusl-ctype = { path = "../rusl-ctype", optional = true }
rusl-internal = { path = "../rusl-internal", optional = true }
rusl-malloc = { path = "../rusl-malloc", optional = true}
rusl-env = { path = "../rusl-env", optional = true }

[profile.dev]
panic = "abort"

[profile.test]
# no_std 测试：由自定义 test framework (setjmp/longjmp) 处理 panic 捕获
panic = "abort"

[profile.release]
panic = "abort"
opt-level = "s"
lto = true