[package]
name = "rusl-stdio"
version = "0.1.0"
edition = "2021"
description = "rusl stdio module"

[lib]
crate-type = ["lib", "staticlib"]
doctest = false
test = true

[features]
default = ["rusl"]
# 开启时依赖各rusl crate,否则使用musl C接口
rusl = ["dep:rusl-stdlib", "dep:rusl-string"]

[dependencies]
rusl-core = { path = "../rusl-core", features = ["rusl"] }
rusl-stdlib = { path = "../rusl-stdlib", optional = true }
rusl-string = { path = "../rusl-string", optional = true }

[dev-dependencies]
rusl-malloc = { path = "../rusl-malloc" }

[profile.dev]
panic = "abort"

[profile.test]
# no_std 测试：由自定义 test framework (setjmp/longjmp) 处理 panic 捕获
panic = "abort"

[profile.release]
panic = "abort"
opt-level = "s"
lto = true