[package]
name = "rusl-syscall"
version = "0.1.0"
edition = "2021"
description = "rusl syscall — 独立系统调用宏, FFI 到 musl libc, 不依赖 rusl 生态"

[lib]
crate-type = ["lib"]
doctest = false
test = true

[features]
default = []
c-test = []

[dependencies]

[profile.dev]
panic = "abort"

[profile.test]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = "s"
lto = true
